# bref-api

./: CHANGELOG.md  README.md
examples/: README.md
examples/ModCGI/: CMakeLists.txt  ModCGI.cpp  README.md
examples/ModHello/: CMakeLists.txt  ModHello.cpp  ModHello.h
examples/ModRewrite/: CMakeLists.txt  ModRewrite.cpp  README.md
include/: README.md
include/bref/: AModule.h  BrefValue.h  Buffer.h  Function.hpp  HttpConstants.h  HttpHeader.h  HttpRequest.h  HttpResponse.h  IConfHelper.h  IDisposable.h  ILogger.h  IModule.h  IpAddress.h  Pipeline.h  ScopedLogger.h  Version.h
include/bref/detail/: BrefDLL.h  Function.def  Function.hpp  FunctionFwd.hpp
include/bref/detail/mp/: IsClassPtr.hpp  RemovePointer.hpp
include/bref/detail/util/: ICaseStringCmp.hpp  NonCopyable.hpp
